<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.ExerciseActivity">

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/share_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:contentDescription="@string/share_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="0dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/baseline_share_24"
            app:iconTint="@color/grey"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/exercise_name"/>

        <ImageView
            android:id="@+id/exercise_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/exercise_border"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/incline_press"
            app:layout_constraintTop_toBottomOf="@id/exercise_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/exercise_image_description" />

        <TextView
            android:id="@+id/exercise_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/exercise_category_string"
            app:layout_constraintTop_toBottomOf="@id/exercise_image"/>

        <TextView
            android:id="@+id/exercise_video_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:text="@string/exercise_view_video_text"
            app:layout_constraintTop_toBottomOf="@id/exercise_category"/>

        <FrameLayout
            android:id="@+id/exercise_video_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_video_text">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_button"
                android:contentDescription="@string/play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:icon="@drawable/baseline_play_arrow_24"
                app:iconTint="@color/white"
                app:iconPadding="0dp"
                app:iconGravity="textStart"/>

            <VideoView
                android:id="@+id/exercise_video"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                />

        </FrameLayout>


        <TextView
            android:id="@+id/exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_video_frame"/>

        <Button
            android:id="@+id/record_video_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/exercise_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/record_video"/>

        <Button
            android:id="@+id/view_video_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/exercise_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/record_video_button"
            android:text="@string/view_video"
            />

        <Button
            android:id="@+id/delete_video_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/exercise_description"
            app:layout_constraintStart_toEndOf="@id/record_video_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/remove_video"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/baseline_check_24"
            app:iconTint="@color/black"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/exercise_description"
            app:layout_constraintStart_toEndOf="@id/delete_video_button"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
